--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,23 @@
+:root{
+  --fg:#231F20;
+  --bg:#EAEAEA;
+  --c1:#8e793e;
+  --c2:#ad974f;
+}
 .App {
   text-align: center;
+  background: var(--bg);
+  color:var(--fg);
+  height:100%;
 }
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
-
+.Nvbr{
+  z-index: 10;
+  background-color: var(--c1);
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -36,3 +47,13 @@
     transform: rotate(360deg);
   }
 }
+.Main{
+  background:var(--c1);
+}
+.bcontainer{
+  min-height: 50vh;
+}
+Container{
+  background:rgba(0,0,0,0);
+}
+@import 'bootstrap/dist/css/bootstrap.min.css'
