--- a/src/App.css
+++ b/src/App.css
@@ -9,19 +9,23 @@
   background: var(--bg);
   color:var(--fg);
   height:100%;
+  font-family:"Inter";
 }
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
 .Nvbr{
-  z-index: 10;
+  position:fixed;
+  top:0px;
+  width:100%;
   background-color: var(--c1);
 }
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+  
 }
 
 .App-header {
@@ -50,10 +54,73 @@
 .Main{
   background:var(--c1);
 }
-.bcontainer{
-  min-height: 50vh;
+
+  @media screen and (min-width:720px) {
+    .container{
+      margin-left:5%;
+    }
+    .bcontainer{
+    padding:0 15% 0 15%;
+    min-height: 30vh;
+    }
+    .top1{
+      display:flex;
+    }
+    .body{
+      font-size:x-large;
+    }
+    
+  span{
+    font-size: small;
+  }
+  .right{
+    text-align: left;
+    padding-left: 5vh;
+  }
+  .leftimg{
+    width:100%;
+  }
+  }
+  @media screen and (max-width:719px) {
+    .bcontainer{
+    padding:0 5% 0 5%;
+    min-height: 50vh;
+    }
+    .body{
+      font-size: small;
+    }
+    span{
+      font-size: smaller;
+    }
+    .right{
+      text-align: center;
+    }
+    .leftimg{
+      width:100%;
+    }
+  }
+  
+
+
+.left{
+  grid-column:1/4;
+  display: block;
+  margin: auto;
+  
+}
+.right{
+  grid-column: span 3/4;
 }
 Container{
   background:rgba(0,0,0,0);
+}
+.body{
+  padding-top: 10vh;
+}
+.bcontainer{
+  border-bottom: 2px solid rgb(184, 176, 176);
+}
+h1{
+  font-family: 'TiltWarp';
 }
 @import 'bootstrap/dist/css/bootstrap.min.css'
