--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,18 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+@font-face {
+  font-family: "TiltWarp";
+  src: local("TiltWarp"),
+   url("./fonts/tiltwarp.ttf") format("truetype");
+  font-weight: normal;
+  }
+  @font-face {
+    font-family: "Inter";
+    src: local("Inter"),
+     url("./fonts/inter.ttf") format("truetype");
+    font-weight: normal;
+    }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
