--- a/src/App.css
+++ b/src/App.css
@@ -87,7 +87,7 @@ Nav{
   }
   @media screen and (max-width:719px) {
     .bcontainer{
-    padding:0 5% 0 5%;
+    padding:10% 5% 0 5%;
     min-height: 50vh;
     }
     .body{
