--- a/src/App.css
+++ b/src/App.css
@@ -87,7 +87,7 @@ Nav{
   }
   @media screen and (max-width:719px) {
     .bcontainer{
-    padding:10% 5% 0 5%;
+    padding:15% 5% 5% 5%;
     min-height: 50vh;
     }
     .body{
@@ -113,15 +113,14 @@ Link>.active {
 .viewer{
   scroll-snap-type: x mandatory;
   display: flex;
-  overflow-x:scroll ;
-  width:100%;
+  overflow-x:hidden;
+  width: 80vw;
 }
 
 .section{
   scroll-snap-align: start;
   height:100%;
-  width: 100%;
-  min-width: 720px;
+  width:200vw;
 }
 
 .left{
@@ -153,6 +152,7 @@ h1{
   min-height: 20vh;
   margin:0 5% 0 0;
   width:50%;
+  
 }
 
 /* This container is needed to position the front and back side */
@@ -163,6 +163,8 @@ h1{
   text-align: center;
   transition: transform 0.8s;
   transform-style: preserve-3d;
+  box-shadow: 0.3em 0.3em 1em 0.1em gray;
+  border-radius: 0.5em;
 }
 
 /* Do an horizontal flip when you move the mouse over the flip box container */
