--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 :root{
   --fg:#293241;
   --bg:#e0fbfc;
-  --c1:#3d5a80;
-  --c2:#98c1d9 ;
-  --c3:#ee6c4d;
+  --c1:#7564c5;
+  --c2:#e1dee9 ;
+  --c3:#b6a6ca;
 }
 .App {
   text-align: center;
@@ -16,23 +16,7 @@
   height: 40vmin;
   pointer-events: none;
 }
-.Nvbr{
-  z-index: 100 ;
-  position:fixed;
-  top:0px;
-  width:100%;
-  background-color: var(--c2);
-  color:var(--bg);
-}
-.Nvbr Nav.Item{
-  color:var(--bg);
-}
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-  
-}
+
 
 .App-header {
   background-color: #282c34;
@@ -57,26 +41,57 @@ Nav{
   color:var(--bg);
 }
   @media screen and (min-width:720px) {
+    .navigation{
+      width: 100%;
+      height:8vh;
+      display:flex;
+      position:sticky;
+      top:0vh;
+      z-index: 100;
+      background-color: var(--c1);
+      color:var(--c2);
+      margin:0;
+      vertical-align: middle;
+      text-align: center;
+      justify-content: center;
+    }
+    .area{
+      width: 60vw;
+      display: flex;
+    }
+    .navigation a:link,a:visited{
+      text-decoration: none;
+      color: var(--c2);
+      margin: auto;
+    }
+    .top1{
+      height: 92vh;
+      width: 100%;
+      padding:5% 10% 5% 10%;
+      display:flex;
+      margin:0;
+      background-color: var(--c1);
+      color:var(--c2);
+    }
     .container{
       margin-left:5%;
     }
     .bcontainer{
     padding:5% 10% 5% 10%;
-    min-height: 30vh;
-    }
-    .top1{
-      display:flex;
+    min-height: 100vh;
     }
     .body{
       font-size:x-large;
     }
-    
+  
   span{
     font-size: small;
   }
   .right{
     text-align: left;
     padding-left: 5vh;
+    margin:auto;
+    flex: 40%;
   }
   .leftimg{
     width:100%;
@@ -84,6 +99,7 @@ Nav{
   .section{
     display:flex;
   }
+
   }
   @media screen and (max-width:719px) {
     .bcontainer{
@@ -129,7 +145,7 @@ Link>.active {
   flex: 33%;
 }
 .right{
-  flex: 67%;
+  flex: 40%;
 }
 Container{
   background:rgba(0,0,0,0);
@@ -152,6 +168,7 @@ h1{
   min-height: 20vh;
   margin:0 5% 0 0;
   width:50%;
+  
   
 }
 
@@ -194,8 +211,8 @@ h1{
 }
 /* Style the back side */
 .flip-card-back {
-  background-color: var(--c2);
-  color: white;
+  background-color: var(--c3);
+  color:var(--fg);
   transform: rotateX(180deg);
   align-items: center;
 }
@@ -207,4 +224,5 @@ h1{
   min-height: 20vh;
   margin:auto;
 }
+
 @import 'bootstrap/dist/css/bootstrap.min.css'
