--- a/src/App.css
+++ b/src/App.css
@@ -198,7 +198,7 @@ p a,p a:link,p a:visited{
       margin-left:5%;
     }
     .bcontainer{
-    padding:5% 10% 5% 10%;
+    padding:5% 5% 5% 5%;
     min-height: 100vh;
     }
     .body{
@@ -290,10 +290,10 @@ h1{
   perspective: 1000px; /* Remove this if you don't want the 3D effect */
   min-width: 200px;
   grid-row: 1/3;
-  min-height: 20vh;
-  margin:0 5% 0 0;
+  min-height: 10vh;
+  margin:0 3% 0 0;
   width:50%;
-  
+  max-width: 40vw;
   
 }
 
@@ -325,6 +325,7 @@ h1{
   align-items: center;
   justify-content: center;
   padding-top:10%;
+  margin: auto;
   
 }
 .flip-card-front {
@@ -340,14 +341,18 @@ h1{
   color:var(--fg);
   transform: rotateX(180deg);
   align-items: center;
+  margin: auto;
 }
-
+flip-card-back p{
+  margin: auto;
+  height: 100%;
+}
 .cards{
-  height:25vw;
+  height:20vw;
   display: flex;  
-  
-  min-height: 20vh;
   margin:auto;
+  min-height: 20vh;
+  margin-top:15vh ;
 }
 
 
