--- a/src/App.css
+++ b/src/App.css
@@ -1,360 +1,106 @@
 :root{
-  --fg:#293241;
-  --bg:#eae6df;
-  --c1:#6e7376;
-  --c2:#dbd4c1;
-  --c3:#e4d5c8;
-  --c4:#b0b0b0;
+ --c1:#262e23;
+ --c2:#14191d;
+ --c3:#8a0303;
+ --c4:#660008;
+ --c5:#40050e;
+ --c6:#070707;
+ --c7:rgb(255, 255, 255);
 }
-.App {
-  text-align: center;
-  background: var(--bg);
-  color:var(--fg);
-  height:100%;
-  font-family:"Inter";
-}
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-.Main{
-  background:var(--c1);
-  color: var(--bg);
-}
-h6{
-  font-size: 1vw;
-  font-weight: bold;
-}
-
-
-.pic a,.pic a:link,.pic a:visited{
-  text-decoration: none;
-  width: 100%;
-  position: relative;
-  background-color: var(--fg);
-  color: var(--c2);
-  text-align: center;
-  border-radius: 5%;
-  padding:2% ;
-  font-size: 0.9vw;
-  margin-top: 3vw;
-}
-.navigation img{
-  height: 100%;
-}
-/*for about page*/
-.tab-list {
-  border-bottom: 4px solid var(--fg);
-  padding-left: 0;
-  display: flex;
-  flex-wrap:wrap-reverse;
-  margin-left: auto;
-  color:var(--c2); 
-}
-ol{
-  margin: 0;
-}
-.tab-list-item {
-  list-style: none;
-  margin-bottom: 0px;
-  padding: 0.5rem 0.75rem;
-  background-color:var(--c1);
-  border-radius: 30% 0% 0% 0%;
-}
-
-.tab-list-active {
-  
-  margin-bottom: -4px;
-  background-color: var(--c2);
-  border: solid var(--fg);
-  border-width: 4px 4px 0 4px;
-  color:var(--fg);
-  
-}
-.tab-list li{
-  cursor: default;
-}
-
-.tab-content{
-  border-bottom: 4px solid var(--fg);
-  border-left: 4px solid var(--fg);
-  border-right: 4px solid var(--fg);
-  background-color: var(--c2);
-  min-height: 60vh;
-}
-.tab-content .information{
-  text-align: left;
-  padding: 2%;
-  position: relative;
-}
-p a,p a:link,p a:visited{
-  color:black;
-}
-.Works{
-  display: flex;
-  justify-content: space-evenly ;
-  margin-bottom: 2vw;
-}
-.work{
-  border: 2px solid var(--c1);
-  border-radius: 5% 5%;
-  flex:0.25;
-  background-color:var(--c4);
-  padding:2%;
-  min-width: 10vw;
-  min-height: 25vh;
-}
-.work p{
-  height: 60%;
-  font-size: 0.9vw;
-  
-}
-.work a,.work a:link,.work a:visited{
-  text-decoration: none;
-  display: block;
-  background-color:var(--c1);
-  position: relative;
-  bottom:0;
-  color:var(--c2);
-  padding: 1%;
-    font-size: 0.9vw;
-  text-align: center;
-}
-
-.pic img{
-  width: 70%;
-  border-radius: 10%;
-  margin-bottom: 2vw;
-}
-  @media screen and (min-width:720px) {
-    .pic{
-      flex:0.4;
-      height: 100%;
-      margin: auto;
-    }
-    .show{
-      display: block;
-      width: 19vw;
-      margin: auto;
-      height: 100%;
-    }
-    .no-show{
-      width: 19vw;
-      display: none;
-    }
-    .navigation{
-      width: 100%;
-      height:8vh;
-      display:flex;
-      position:sticky;
-      top:0vh;
-      z-index: 100;
-      background-color: var(--c1);
-      color:white;
-      margin:0;
-      vertical-align: middle;
-      text-align: center;
-      justify-content: center;
-    }
-    .area{
-      width: 60vw;
-      display: flex;
-    }
-    .navigation a:link,a:visited{
-      text-decoration: none;
-      color: white;
-      margin: auto;
-    }
-    .top1{
-      height: 92vh;
-      width: 100%;
-      padding:5% 10% 5% 10%;
-      display:flex;
-      margin:0;
-      background-color: var(--c1);
-      color:white;
-    }
-    .top1 h1{
-      font-size:8vh;
-    }
-    .container{
-      margin-left:5%;
-    }
-    .bcontainer{
-    padding:5% 5% 5% 5%;
-    min-height: 100vh;
-    }
-    .body{
-      font-size:x-large;
-    }
-  
-  span{
-    font-size: small;
-  }
-  .right{
-    text-align: left;
-    padding-left: 5vh;
-    margin:auto;
-    flex: 40%;
-  }
-  .leftimg{
-    width:100%;
-  }
-  .section{
-    display:flex;
-  }
-  .tab-content{
-    display: flex;
-  }
-  .tab-content .information{
-    flex:0.7;
-  }
-  }
-  @media screen and (max-width:719px) {
-    .bcontainer{
-    padding:15% 5% 5% 5%;
-    min-height: 50vh;
-    }
-    .body{
-      font-size: small;
-    }
-    span{
-      font-size: smaller;
-    }
-    .right{
-      text-align: center;
-    }
-    .leftimg{
-      width:100%;
-    }
-    .cards{
-      overflow-x: scroll;
-      overflow-y:hidden ;
-    }
-  }
-Link>.active {
-    border-bottom: 1px solid #333;
-}
-.viewer{
-  scroll-snap-type: x mandatory;
-  display: flex;
-  overflow-x:hidden;
-  width: 80vw;
-}
-
 .section{
-  scroll-snap-align: start;
-  height:100%;
-  width:200vw;
+  height: 100vh;
+  font-size: 2.5vmin;
+  width: 100vw;
+  padding: 1vmin;
 }
-
-.left{
-  display: block;
+.black{
+  background-color: var(--c6);
+  color:var(--c7);
+}
+.btn-red{
+  background-color: var(--c5);
+  color:var(--c7);
+}
+.pic{
+  background-image: url('./components/bg.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  color: var(--c7);
+}
+.pic2{
+  background-image: url('./components/bg1.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  color: var(--c7);
+}
+.pic3{
+  background-image: url('./components/war.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  color: var(--c7);
+}
+.translucent{
+  background-color: rgba(0,0,0,0.4);
+}
+.top{
+  display:flex;
+}
+body::-webkit-scrollbar{
+  display: none;
+}
+.top img{
+  width: 100%;
+}
+.top .left{
+  width:40%;
   margin: auto;
-  flex: 33%;
 }
-.right{
-  flex: 40%;
+.top .right{
+  margin: auto;
+  width:60%;
 }
-Container{
-  background:rgba(0,0,0,0);
-  color:var(--bg);
-}
-.bcontainer{
-  border-bottom: 2px solid rgb(184, 176, 176);
-}
-h1{
+h2{
+  font-size: 10vmin;
   font-family: 'TiltWarp';
 }
-/* Flip card from w3 school*/
-.flip-card {
-  background-color: transparent;
-  height: 100%; 
-  perspective: 1000px; /* Remove this if you don't want the 3D effect */
-  min-width: 200px;
-  grid-row: 1/3;
-  min-height: 10vh;
-  margin:0 3% 0 0;
-  width:50%;
-  max-width: 40vw;
-  
+.span{
+  padding-right: 20vmin;
 }
-
-/* This container is needed to position the front and back side */
-.flip-card-inner {
-  position: relative;
+.title{
   width: 100%;
-  height: 100%;
   text-align: center;
-  transition: transform 0.8s;
-  transform-style: preserve-3d;
-  box-shadow: 0.3em 0.3em 1em 0.1em gray;
-  border-radius: 0.5em;
 }
-
-/* Do an horizontal flip when you move the mouse over the flip box container */
-.flip-card:hover .flip-card-inner {
-  transform: rotateX(180deg);
-}
-
-/* Position the front and back side */
-.flip-card-front, .flip-card-back {
-  position: absolute;
-  border-radius: 0.5em;
-  width: 100%;
-  height: 100%;
-  -webkit-backface-visibility: hidden; /* Safari */
-  backface-visibility: hidden;
-  align-items: center;
-  justify-content: center;
-  padding-top:10%;
-  margin: auto;
-  
-}
-.flip-card-front {
-  background:var(--c4);
-  color: black;
-}
-.flip-card-front img{
-  height: 50%;
-}
-/* Style the back side */
-.flip-card-back {
-  background-color: var(--c2);
-  color:var(--fg);
-  transform: rotateX(180deg);
-  align-items: center;
-  margin: auto;
-}
-flip-card-back p{
-  margin: auto;
-  height: 100%;
-}
+/* overview exclusive */
 .cards{
-  height:20vw;
-  display: flex;  
-  margin:auto;
-  min-height: 20vh;
-  margin-top:15vh ;
+  width: 80%;
+  display: flex;
+  margin: auto;
 }
-
-
-
+.card{
+  width: 50%;
+  height: 50vmin;
+  margin-top: 10%;
+  margin-left: 5%;
+  background-color: var(--c4);
+  color: var(--c7);
+  padding: 1vmin;
+  padding-top: 10vmin;
+}
+.card h5{
+  font-weight: bold;
+  align-self: center;
+  font-size: 4vmin;
+}
+.card img{
+  width: 15vmin;
+  position: absolute;
+  top:-15%;
+  align-self: center;
+}
 @import 'bootstrap/dist/css/bootstrap.min.css'
