--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -11,6 +11,7 @@
     bottom:0;
     z-index: 2;
     padding:1em;
+    padding-top: 0;
     color:white;
     overflow-x: hidden;
     overflow-y: auto;
