--- a/src/NewSection/section.css
+++ b/src/NewSection/section.css
@@ -32,6 +32,12 @@
     height:60dvh;
     margin:1%
   }
+  .fullcharts{
+    border:1px dotted red;
+    width: 100dvw;
+    height:60dvh;
+    margin:1%;
+  }
   .title{
     background-color: black;
     position:absolute;
@@ -39,9 +45,11 @@
   }
   .divider{
     display:flex;
+    padding: 2%;
   }
   .text{
     margin:auto;
+    padding: 2%;
   }
   .subsection{
     border:3px solid red;
@@ -54,6 +62,8 @@
     margin:1%;  
     padding: 1%;
     border-radius: 1vw;
+    overflow-x: auto;
+    overflow-y: hidden;
   }
   .subsubsubsection{
     border:2px solid pink;
