--- a/src/App2.css
+++ b/src/App2.css
@@ -2,10 +2,10 @@
 :root {
   --c1: #461919;
   --c2: #14191d;
-  --c3: #434343;
+  --c3: #191919;
   --c4: #660008;
   --c5: #40050e;
-  --c6: #070707;
+  --c6: #d4d4d4;
   --c7: rgb(255, 255, 255);
 }
 
