--- a/src/NewSection/section.css
+++ b/src/NewSection/section.css
@@ -5,7 +5,7 @@
     margin:auto;
     background-color: transparent;
     border: 0.2em solid white;
-    color:white;
+    color:var(--c6);
     border-radius: 10%;
     outline:none;
     font-size:max(12px,1.5vw);
