finished about, and added ML section

--- a/src/NewSection/section.css
+++ b/src/NewSection/section.css
@@ -40,9 +40,10 @@
     padding-bottom: 2%;
   }
   .title{
-    background-color: inherit;
+    background-color: black;
     position:absolute;
     top:0;
+    width: 100%;
   }
   .divider{
     display:flex;
@@ -111,4 +112,17 @@
   .cen{
     margin: auto;
     font-size: 1.5rem;
+  }
+  .apic a{
+    display:block;
+    background-color: black;
+    color:white;
+    width:40%;
+    height:5dvh;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+  }
+  .ml img{
+    width: 100%;
   }
